Changes made: - Readme file to fix error - Sytles for overlapping introduction container

--- a/styles/sytles.css
+++ b/styles/sytles.css
@@ -83,7 +83,7 @@
     border-radius: 10px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.75);
     margin: 0px auto;
-    width: 85%;
+    width: 80%;
 }
 
 .introduction_container {
